--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anylist",
   "version": "0.0.1",
-  "description": "",
+  "descripcion": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
+    "graphql-upload": "^16.0.2",
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
