--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.3.12",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "aws-sdk": "^2.1350.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-upload": "^16.0.2",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.10.0",
