--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "aws-sdk": "^2.1350.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-upload": "^16.0.2",
     "moment": "^2.29.4",
