--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,14 @@
 STATE= dev
-DB_PASSWORD=algunpassword
+
+DB_PASSWORD=contra12secreta
 DB_NAME=AnyList
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 
-JWT_SECRET="cambiar esto"
+JWT_SECRET=loquequieran
+
+AWS_ACCESS_KEY_ID=enviado_a_juancarlos
+AWS_SECRET_ACCESS_KEY=enviado_a_juancarlos
+AWS_BUCKET_NAME=enviado_a_juancarlos
+AWS_REGION=enviado_a_juancarlos
