--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    container_name: anylistDB
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
+      PGDATA: /var/lib/pg_data
+
+    container_name: anylistdb
+    # volumes:
+    #   - ./postgres:/var/lib/postgres/data
